--- a/index.html
+++ b/index.html
@@ -1,60 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Earnings Predictor</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Earnings Predictor</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="top-bar">
-    <div class="header-top">
-      <h1>Earnings Predictor</h1>
-    
-      <div class="search-box">
-        <img class="search-icon" src="https://cdn-icons-png.flaticon.com/128/3917/3917132.png" alt="Search Icon" />
-        <input type="text" placeholder="Search for a stock..." />
-      </div>
+    <div class="top-bar">
+        <div class="header-top">
+            <h1>Earnings Predictor</h1>
+            <div class="search-box">
+                <img class="search-icon" src="https://cdn-icons-png.flaticon.com/128/3917/3917132.png" alt="Search Icon" />
+                <input type="text" placeholder="Search for a stock..." />
+            </div>
+        </div>
+        <nav class="categories-nav">
+            <button class="selected">All</button>
+            <button>Technology</button>
+            <button>Healthcare</button>
+            <button>Financials</button>
+            <button>Consumer Discretionary</button>
+            <button>Consumer Staples</button>
+            <button>Energy</button>
+            <button>Industrials</button>
+            <button>Materials</button>
+            <button>Utilities</button>
+            <button>Real Estate</button>
+            <button>Communication Services</button>
+        </nav>
     </div>
-    <nav class="categories-nav">
-      <button class="selected">Technology</button>
-      <button>Healthcare</button>
-      <button>Financials</button>
-      <button>Consumer Discretionary</button>
-      <button>Consumer Staples</button>
-      <button>Energy</button>
-      <button>Industrials</button>
-      <button>Materials</button>
-      <button>Utilities</button>
-      <button>Real Estate</button>
-      <button>Communication Services</button>
-    </nav>
-  </div>
 
-  <main>
-    <div class="cards-grid">
-      <!-- 20 blank cards -->
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-      <div class="card"><div class="card-content"></div></div>
-    </div>
-  </main>
+    <main>
+        <div class="cards-grid">
+            <!-- 20 blank cards -->
+            <div class="card">
+                <div class="card-content"></div>
+            </div>
+            <div class="card mode-prediction">
+                <div class="card-content">
+                    <div class="logo"></div>
+                    <div class="header">
+                        <h2 class="company">Tesla Inc.</h2>
+                        <span class="ticker">TSLA</span>
+                    </div>
+                    <div class="details">
+                        <div class="info">
+                            <span class="label">Next Release:</span>
+                            <span class="value">Nov 15</span>
+                        </div>
+                        <div class="info">
+                            <span class="label">Expected EPS:</span>
+                            <span class="value">2.71</span>
+                        </div>
+                    </div>
+                    <!-- Prediction gauge -->
+                    <div class="visual prediction">
+                        <svg class="gauge" viewBox="0 0 100 50">
+                            <path class="bg" d="M10,50 A40,40 0 0,1 90,50"/>
+                            <path class="fg" d="M10,50 A40,40 0 0,1 60.4,14.6"/>
+                        </svg>
+                        <div class="percent">51%</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card mode-countdown">
+                <div class="card-content">
+                    <div class="logo"></div>
+                    <div class="header">
+                        <h2 class="company">Tesla Inc.</h2>
+                        <span class="ticker">TSLA</span>
+                    </div>
+                    <div class="details">
+                        <div class="info">
+                            <span class="label">Next Release:</span>
+                            <span class="value">Nov 15</span>
+                        </div>
+                        <div class="info">
+                            <span class="label">Expected EPS:</span>
+                            <span class="value">3.52</span>
+                        </div>
+                    </div>
+                    <!-- Countdown block -->
+                    <div class="visual countdown">
+                        <div class="count">3</div>
+                        <div class="unit">days until release</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <script src="main.js"></script>
 </body>
 </html>
