Got data for all stocks to search and started inputting custom logos for front page / top sector stocks

--- a/index.html
+++ b/index.html
@@ -32,66 +32,9 @@
     </div>
 
     <main>
-        <div class="cards-grid">
-            <!-- 20 blank cards -->
-            <div class="card">
-                <div class="card-content"></div>
-            </div>
-            <div class="card mode-prediction">
-                <div class="card-content">
-                    <div class="logo"></div>
-                    <div class="header">
-                        <h2 class="company">Tesla Inc.</h2>
-                        <span class="ticker">TSLA</span>
-                    </div>
-                    <div class="details">
-                        <div class="info">
-                            <span class="label">Next Release:</span>
-                            <span class="value">Nov 15</span>
-                        </div>
-                        <div class="info">
-                            <span class="label">Expected EPS:</span>
-                            <span class="value">2.71</span>
-                        </div>
-                    </div>
-                    <!-- Prediction gauge -->
-                    <div class="visual prediction">
-                        <svg class="gauge" viewBox="0 0 100 50">
-                            <path class="bg" d="M10,50 A40,40 0 0,1 90,50"/>
-                            <path class="fg" d="M10,50 A40,40 0 0,1 60.4,14.6"/>
-                        </svg>
-                        <div class="percent">51%</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card mode-countdown">
-                <div class="card-content">
-                    <div class="logo"></div>
-                    <div class="header">
-                        <h2 class="company">Tesla Inc.</h2>
-                        <span class="ticker">TSLA</span>
-                    </div>
-                    <div class="details">
-                        <div class="info">
-                            <span class="label">Next Release:</span>
-                            <span class="value">Nov 15</span>
-                        </div>
-                        <div class="info">
-                            <span class="label">Expected EPS:</span>
-                            <span class="value">3.52</span>
-                        </div>
-                    </div>
-                    <!-- Countdown block -->
-                    <div class="visual countdown">
-                        <div class="count">3</div>
-                        <div class="unit">days until release</div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="cards-grid"></div>
     </main>
-    <script src="main.js"></script>
     <script src="customLogos.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
