Fixed Ca rd format, header format, and added fade to category navigation

--- a/index.html
+++ b/index.html
@@ -8,29 +8,32 @@
 </head>
 <body>
     <div class="top-bar">
-        <div class="header-top">
-            <h1>Earnings Predictor</h1>
-            <div class="search-box">
-                <img class="search-icon" src="https://cdn-icons-png.flaticon.com/128/3917/3917132.png" alt="Search Icon" />
-                <input type="text" placeholder="Search for a stock..." />
+        <div class="header-container">
+            <div class="header-top">
+                <h1>Earnings Predictor</h1>
+                <div class="search-box">
+                    <img class="search-icon" src="https://cdn-icons-png.flaticon.com/128/3917/3917132.png" alt="Search Icon" />
+                    <input type="text" placeholder="Search for a stock..." />
+                </div>
+            </div>
+            <div class="categories-wrapper">
+                <nav class="categories-nav">
+                    <button class="selected">All</button>
+                    <button>Technology</button>
+                    <button>Healthcare</button>
+                    <button>Financials</button>
+                    <button>Consumer Discretionary</button>
+                    <button>Consumer Staples</button>
+                    <button>Energy</button>
+                    <button>Industrials</button>
+                    <button>Materials</button>
+                    <button>Utilities</button>
+                    <button>Real Estate</button>
+                    <button>Communication Services</button>
+                </nav>
             </div>
         </div>
-        <nav class="categories-nav">
-            <button class="selected">All</button>
-            <button>Technology</button>
-            <button>Healthcare</button>
-            <button>Financials</button>
-            <button>Consumer Discretionary</button>
-            <button>Consumer Staples</button>
-            <button>Energy</button>
-            <button>Industrials</button>
-            <button>Materials</button>
-            <button>Utilities</button>
-            <button>Real Estate</button>
-            <button>Communication Services</button>
-        </nav>
     </div>
-
     <main>
         <div class="cards-grid"></div>
     </main>
