--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
         <div class="header-container">
             <div class="header-top">
                 <h1>Earnings Predictor</h1>
-                <div class="search-box">
-                    <img class="search-icon" src="https://cdn-icons-png.flaticon.com/128/3917/3917132.png" alt="Search Icon" />
-                    <input type="text" placeholder="Search for a stock..." />
+                <div class="search-container"> 
+                    <div class="search-box">
+                        <img class="search-icon" src="https://cdn-icons-png.flaticon.com/128/3917/3917132.png" alt="Search Icon" />
+                        <input type="text" placeholder="Search for a stock..." />
+                    </div>
+                    <div class="search-results"></div>
                 </div>
             </div>
             <div class="categories-wrapper">
                 <nav class="categories-nav">
-                    <button class="selected">All</button>
+                    <button class="selected" id="all-button">All</button>
                     <button>Technology</button>
                     <button>Financials</button>
                     <button>Consumer Discretionary</button>
@@ -38,6 +41,7 @@
         <div class="cards-grid"></div>
     </main>
     <script src="customLogos.js"></script>
+    <script src="searchStocks.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
