Fixed formatting and added stock page but prediction visual not done yet

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="categories-wrapper">
                 <nav class="categories-nav">
-                    <button class="selected" id="all-button">All</button>
+                    <button id="all-button">All</button>
                     <button>Technology</button>
                     <button>Financials</button>
                     <button>Consumer Discretionary</button>
@@ -37,8 +37,11 @@
             </div>
         </div>
     </div>
-    <main>
-        <div class="cards-grid"></div>
+    <main class="content">
+        <div class="cards-grid" id="cardsGrid"></div>
+        <div class="search-stock" id="searchStock">
+
+        </div>
     </main>
     <script src="customLogos.js"></script>
     <script src="searchStocks.js"></script>
