Changed header font

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Earnings Predictor</title>
+    <title>Earnings Forecast</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <div class="top-bar">
         <div class="header-container">
             <div class="header-top">
-                <h1>Earnings Predictor</h1>
+                <h1>Earnings Forecast</h1>
                 <div class="search-container"> 
                     <div class="search-box">
                         <img class="search-icon" src="https://cdn-icons-png.flaticon.com/128/3917/3917132.png" alt="Search Icon" />
