Fixed footer name

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </body>
 <footer class="footer">
     <div class="footer-content">
-        <p>&copy; <span id="currentYear"></span> Earnings Forecast. All rights reserved.</p>
+        <p>&copy; <span id="currentYear"></span> Earnings Edge. All rights reserved.</p>
         <script>
             document.getElementById('currentYear').textContent = new Date().getFullYear();
         </script>
